Bug #120741 bug: Select Payment Gateway -input box alignment

--- a/src/com_tjvendors/media/css/tjvendors.css
+++ b/src/com_tjvendors/media/css/tjvendors.css
@@ -32,7 +32,8 @@ display:inline-flex;
 margin-right:4px;
 }
 
-#tjv-wrapper #jform_payment_gateway_chzn{
+#tjv-wrapper #jform_payment_gateway_chzn,
+#tjv-wrapper .vendorForm .chzn-container{
 width:200px !important;
 }
 
